--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,30 @@
 {
+	"plugins": ["jsdoc"],
 	"env": {
-		"browser": true,
-		"es2021": true,
-		"node": true
+		"node": true,
+		"es2021": true
 	},
-	"extends": "eslint:recommended",
+	"extends": ["eslint:recommended", "plugin:jsdoc/recommended"],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
 	"rules": {
-		"no-unused-vars": 1,
-		"semi": 1
+		"indent": ["error", "tab"],
+		"linebreak-style": ["error", "unix"],
+		"quotes": ["error", "double"],
+		"semi": ["error", "always"],
+		"no-else-return": "warn",
+		"no-magic-numbers": "warn",
+		"no-return-assign": "error",
+		"no-unneeded-ternary": "warn",
+		"no-var": "warn",
+		"prefer-const": "warn",
+		"require-jsdoc": 1,
+		"spaced-comment": ["warn", "always"],
+		"key-spacing": "warn",
+		"jsdoc/check-indentation": 1,
+		"jsdoc/require-description": 1,
+		"jsdoc/require-jsdoc": 1
 	}
 }
