--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
 	"devDependencies": {
 		"eslint": "^8.20.0",
 		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-plugin-import": "^2.26.0"
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsdoc": "^39.3.3"
 	},
 	"dependencies": {
-		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.0",
 		"cors": "^2.8.5",
+		"crypto-js": "^4.1.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"joi": "^17.6.0",
 		"mongoose": "^6.4.5",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^2.0.19",
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.0",
