--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"joi": "^17.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.4.5",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemon": "^2.0.19",
-		"passport": "^0.6.0",
-		"passport-jwt": "^4.0.0",
+		"swagger-ui-express": "^4.5.0",
 		"validator": "^13.7.0"
 	}
 }
