--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"mongoose": "^6.4.5",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.7.7",
 		"nodemon": "^2.0.19",
 		"swagger-ui-express": "^4.5.0",
 		"validator": "^13.7.0"
