--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
 	"plugins": ["jsdoc"],
 	"env": {
 		"node": true,
-		"es2021": true
+		"es2021": true,
+		"mocha": true
 	},
 	"extends": ["eslint:recommended", "plugin:jsdoc/recommended"],
 	"parserOptions": {
