--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/server.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "mocha",
 		"start": "nodemon server.js"
 	},
 	"repository": {
@@ -22,7 +22,9 @@
 		"eslint": "^8.20.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "^39.3.3"
+		"eslint-plugin-jsdoc": "^39.3.3",
+		"mocha": "^10.0.0",
+		"supertest": "^6.2.4"
 	},
 	"dependencies": {
 		"body-parser": "^1.20.0",
