--- a/package.json
+++ b/package.json
@@ -27,11 +27,18 @@
 		"supertest": "^6.2.4"
 	},
 	"dependencies": {
+		"@babel/cli": "^7.18.10",
+		"@babel/core": "^7.19.0",
+		"@babel/node": "^7.18.10",
+		"@babel/preset-env": "^7.19.0",
+		"babel-plugin-module-resolver": "^4.1.0",
 		"body-parser": "^1.20.0",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
+		"datadog-winston": "^1.5.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"helmet": "^6.0.0",
 		"joi": "^17.6.0",
 		"jsonwebtoken": "^8.5.1",
 		"mailtrap": "^3.0.0",
@@ -41,6 +48,7 @@
 		"nodemailer": "^6.7.7",
 		"nodemon": "^2.0.19",
 		"swagger-ui-express": "^4.5.0",
-		"validator": "^13.7.0"
+		"validator": "^13.7.0",
+		"winston": "^3.8.1"
 	}
 }
